# Media_service

./: README.md  alembic.ini  pyproject.toml  pytest.ini
app/: config.py  database.py  main.py  models.py  router.py  schemas.py  services.py
migrations/: env.py
migrations/versions/: 12eceb1a8dd4_create_tables.py
tests/: conftest.py  test_upload.py  test_upload_in_stream.py
