[tool.poetry]
name = "media_service"
version = "0.1.0"
description = "REST API for media file management"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.1"
uvicorn = "^0.15.0"
sqlalchemy = "^1.4.22"
asyncpg = "^0.29.0"
aiofiles = "^0.7.0"
pydantic = "^2.8.2"
pytest = "^6.2.4"
python-multipart = "^0.0.9"
requests = "^2.32.3"
pydantic-settings = "^2.4.0"
python-dotenv = "^1.0.1"
alembic = "^1.13.2"
httpx = "^0.27.0"
mypy = "^1.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"